--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
 }
 
 .logo{
-    background-image: url("/imges/amzan-logo.png");
+    background-image: url("amzan-logo.png");
     width: 100%;
     height: 40px;
     background-size: cover;
@@ -152,7 +152,7 @@ span{
 /* Hero Section */
 
 .hero-section{
-    background-image: url("/imges/Background.jpg");
+    background-image: url("Background.jpg");
     height: 300px;
     /* width: 1500px; */
     background-size: cover;
